--- a/projekte/test/Home_Sweet_Home/index.html
+++ b/projekte/test/Home_Sweet_Home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Testing Ink</title>
+    <title>Home, Sweet Home</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,10 +14,18 @@
 <body>
 
     <div class="outerContainer">
-        <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3>
+        <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">Written in Ink</a></h3>
+
+        <div id="controls" class="buttons">
+          <a id="rewind" title="Restart story from beginning">Neustart</a>
+          <a id="save" title="Save progress">Sichern</a>
+          <a id="reload" title="Reload from save point">Laden</a>
+          <a id="theme-switch" title="Switch theme">Theme</a>
+        </div>
+
         <div id="story" class="container">
             <div class="header">
-                <h1>Testing Ink</h1>
+                <h1>Home, Sweet Home</h1>
                 <h2 class="byline"></h2>
             </div>
         </div>
